--- a/making_of.ipynb
+++ b/making_of.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15529/3807334565.py:4: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "C:\\Users\\KCvan\\AppData\\Local\\Temp\\ipykernel_15068\\3544119449.py:5: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  gemeenten_wiki = pd.read_csv(\"./Nederlandse_gemeenten.txt\", sep=\" \\t\", header=None)\n"
      ]
     }
@@ -60,7 +60,7 @@
     "]\n",
     "\n",
     "[a_dict.update(x) for x in prompt]\n",
-    "pd.DataFrame.from_dict(a_dict).to_excel(\"./willekeurige dataset.xlsx\")"
+    "pd.DataFrame.from_dict(a_dict)"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
