--- a/making_of.ipynb
+++ b/making_of.ipynb
@@ -65,6 +65,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "achternaam {'achternamen_value': {'variable_new': 'ceo1'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'achternaam': {'achternamen_value': {'variable_new': 'ceo1'}}}\n",
+    "for variable, config in d.items():\n",
+    "    print(variable, config)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -87,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
